# qiniu_image_manager

./: .gitignore  README.md  settings.gradle
app/: build.gradle  test.jks
app/src/main/: AndroidManifest.xml
app/src/main/java/com/huawei/qiniu_upload/: FileItemInfo.java  FileSizeFormat.java  ImagePreviewActivity.java  MainActivity.java  MqttUserInfo.java
app/src/main/res/drawable/: drawable_new_image_arrived.xml
app/src/main/res/layout/: activity_image_preview.xml  activity_main.xml  layout_list_image_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
qiniu_token/: build.gradle
qiniu_token/src/main/cpp/: CMakeLists.txt  qiniu_token.cpp
qiniu_token/src/main/cpp/cpp-base64-master/: base64.cpp
qiniu_token/src/main/cpp/hmac-sha1-master/: sample.c
qiniu_token/src/main/cpp/hmac-sha1-master/src/hmac/: hmac.h  hmac_sha1.c
qiniu_token/src/main/java/com/huawei/qiniu_token/: BaseToken.java  HexStringUtil.java  QiniuToken.java  QiniuTokenJava.java
qiniu_token/src/main/java/com/qiniu/util/: Auth.java  StringMap.java  StringUtils.java  UrlSafeBase64.java
